--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- AXIOS -->
     <script src="./js/axios@1.13.min.js"></script>
     <!-- LIBRERIA AXIOS -->
@@ -12,8 +12,10 @@
     <!-- SCRIPT PRINCIPALE -->
     <script src="./js/script.js"></script>
     <title>Random User</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div id="wrapper">
+      <h1>Random User Generator</h1>
+    </div>
+  </body>
 </html>
