--- a/index.html
+++ b/index.html
@@ -11,11 +11,51 @@
     <script src="./js/libreria.js"></script>
     <!-- SCRIPT PRINCIPALE -->
     <script src="./js/script.js"></script>
-    <title>Random User</title>
+    <!-- BOOTSTRAP -->
+    <!-- <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous" />
+    <title>Random User</title> -->
   </head>
-  <body>
+  <body class="bg">
     <div id="wrapper">
-      <h1>Random User Generator</h1>
+      <header class="">
+        <h1>Random User Generator</h1>
+        <div>Generatore gratutito di utenti</div>
+      </header>
+
+      <div id="main">
+        <div class="card">
+          <img src="./neikGiovane.png">
+          <div>neik the gyat</div>
+        </div>
+
+        <div class="card">
+          <img src="./neikGiovane.png">
+          <div>neik the gyat</div>
+        </div>
+
+        <div class="card">
+          <img src="./neikGiovane.png">
+          <div>neik the gyat</div>
+        </div>
+
+        <div class="card">
+          <img src="./neikGiovane.png">
+          <div>neik the gyat</div>
+        </div>
+        
+        <div class="card">
+          <img src="./neikGiovane.png">
+          <div>neik the gyat</div>
+        </div>
+        
     </div>
   </body>
 </html>
