--- a/index.html
+++ b/index.html
@@ -10,18 +10,10 @@
     <!-- LIBRERIA AXIOS -->
     <script src="./js/libreria.js"></script>
     <!-- SCRIPT PRINCIPALE -->
-    <script src="./js/script.js"></script>
-    <!-- BOOTSTRAP -->
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous" />
-    <title>Random User</title> -->
+    <script defer src="./js/script.js"></script>
+    <!-- SCRIPT PER GRAFICA -->
+     <script defer src="./js/graphics.js"></script>
+    <title>Random User</title>
   </head>
   <body class="bg">
     <div id="wrapper">
@@ -29,6 +21,25 @@
         <h1>Random User Generator</h1>
         <div>Generatore gratutito di utenti</div>
       </header>
+
+      <div id="modalImpostazioni" class="modal">
+        <p><button id="chiudiImpostazioni">X</button></p>
+        <div class="modalHeader">
+          <h1>IMPOSTAZIONI DI GENERAZIONE</h1>
+        </div>
+        <div class="modalContent">
+            <div style="font-size: 18pt; font-weight: bold;">Numero Utenti</div>
+            <div class="contenitoreSlider">
+              <input type="range" min="1" max="100" value="20" id="rangePersone">
+              <div style="margin-top: 10px; font-size: 18pt">20</div>
+            </div>
+        </div>  
+      </div>
+
+      <div id="btnsWrapper">
+        <button id="btnImpostazioni">Impostazioni</button>
+        <button id="btnQuery">Query</button>
+      </div>
 
       <div id="main">
         <div class="card">
