--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
               <input type="range" min="1" max="100" value="20" id="rangePersone">
               <div style="margin-top: 10px; font-size: 18pt">20</div>
             </div>
+
+            <div>GENERE UTENTI</div>
+            <div id="contenitoreImmagini">  
+              <img src="./img/machio.png" alt="">
+              <img src="./img/femmina.png" alt="">
+              <img src="./img/unione.png" alt="">
+            </div>
         </div>  
       </div>
 
