--- a/index.html
+++ b/index.html
@@ -34,22 +34,127 @@
               <div style="margin-top: 10px; font-size: 18pt">20</div>
             </div>
 
-            <div>GENERE UTENTI</div>
+            <h1>Genere Utenti</h1>
+
             <div id="contenitoreImmagini">  
-              <img src="./img/machio.png" alt="">
-              <img src="./img/femmina.png" alt="">
-              <img src="./img/unione.png" alt="">
+              <div style="background-image: url(./img/machio.png);"></div>
+              <div style="background-image: url(./img/femmina.png);"></div>
+              <div style="background-image: url(./img/unione.png);"></div>
             </div>
         </div>  
+        <div>
+          <button id="btnGenera">GENERA</button>
+        </div>
+      </div>
+
+      <div id="modalOrdinamenti" class="modal">
+        <p><button id="chiudiImpostazioni">X</button></p>
+        <div class="modalHeader">
+          <h1>Ordinamenti</h1>
+        </div>
+        <div class="modalContent">
+          <div id="contenitoreNazioni">
+            <div class="divNazioni">
+              <img src="./img/bandiere/australia.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="au"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/brasile.webp" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="br"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/canada.webp" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="ca"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/danimarca.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="dk"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/finalandia.svg" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="fi"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/germania.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="de"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/india.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="in"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/iran.svg" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="ir"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/irlanda.svg" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="ie"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/messico.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="mx"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/novergia.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="no"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/nuovaZelanda.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="au"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/olanda.svg" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="nl"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/regnoUnito.svg" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="gb"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/serbia.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="rs"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/spagna.svg" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="es"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/svizzera.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="ch"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/turchia.webp" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="tr"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/ucraina.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="ua"></label>
+            </div>
+            <div class="divNazioni">
+              <img src="./img/bandiere/usa.png" alt="">
+              <label for=""><input type="checkbox" name="chkNazioni" value="us"></label>
+            </div>
+          </div>
+          <div>
+            <select  id="cmbOrdinamneti">
+              <option value="">NOME ORDINE CRESCENTE</option>
+              <option value="">NOME ORDINE DECRESCENTE</option>
+              <option value="">COGNOME ORDINE CRESCENTE</option>
+              <option value="">COGNOME ORDINE DECRESCENTE</option>
+            </select>
+          </div>
+            <button id="pulisciNazioni">Clear all</button>
+
+        </div> 
       </div>
 
       <div id="btnsWrapper">
         <button id="btnImpostazioni">Impostazioni</button>
-        <button id="btnQuery">Query</button>
+        <button id="btnQuery">Ordinamenti</button>
       </div>
 
       <div id="main">
-        <div class="card">
+        <!-- <div class="card">
           <img src="./neikGiovane.png">
           <div>neik the gyat</div>
         </div>
@@ -71,7 +176,7 @@
         
         <div class="card">
           <img src="./neikGiovane.png">
-          <div>neik the gyat</div>
+          <div>neik the gyat</div> -->
         </div>
         
     </div>
