card dettagli finita

--- a/index.html
+++ b/index.html
@@ -207,50 +207,27 @@
       <div id="modalCard" class="mymodal">
         <p><button id="chiudiCard">X</button></p>
         <div class="mymodalHeaderCard">
-          <img src="https://randomuser.me/api/portraits/men/51.jpg" alt="" />
+          <img src="" alt="" />
         </div>
         <div class="mymodalContentCard">
-          <div>
-            <label for="txtNome">
-              Nome
-              <input type="text" value="sium" id="txtNome" />
-            </label>
-          </div>
+          <label for="txtNome"> Nome </label>
+          <input readonly class="txt" type="text" value="" id="txtNome" />
 
-          <div>
-            <label for="txtEmail">
-              Email
-              <input type="email" value="sium" id="txtEmail" />
-            </label>
-          </div>
+          <label for="txtEmail"> Email </label>
+          <input readonly class="txt" type="email" value="" id="txtEmail" />
 
-          <div>
-            <label for="txtData">
-              Data di Nascita
-              <input type="date" value="sium" id="txtData" />
-            </label>
-          </div>
+          <label for="txtData"> Iscrizione </label>
+          <input readonly class="txt" type="text" value="" id="txtData" />
 
-          <div>
-            <label for="txtIndirizzo">
-              Indirizzo
-              <input type="text" value="sium" id="txtIndirizzo" />
-            </label>
-          </div>
 
-          <div>
-            <label for="txtTelefono">
-              Telefono
-              <input type="tel" value="sium" id="txtTelefono" />
-            </label>
-          </div>
+          <label for="txtIndirizzo"> Indirizzo </label>
+          <input readonly class="txt" type="text" value="" id="txtIndirizzo" />
 
-          <div>
-            <label for="txtPassword">
-              Password
-              <input type="password" value="sium" id="txtPassword" />
-            </label>
-          </div>
+          <label for="txtTelefono"> Telefono </label>
+          <input readonly class="txt" type="tel" value="" id="txtTelefono" />
+
+          <label for="txtPassword"> Password </label>
+          <input readonly class="txt" type="text" value="" id="txtPassword" />
         </div>
       </div>
 
