--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
     <script defer src="./js/script.js"></script>
     <!-- SCRIPT PER GRAFICA -->
     <script defer src="./js/graphics.js"></script>
+    <!--  JQUERY -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"></script>
   </head>
   <body class="bg">
     <div id="wrapper">
       <div id="modalImpostazioni" class="mymodal">
-        <p><button id="chiudiImpostazioni">X</button></p>
+        <p><button id="chiudiImpostazioni" class="btnChiudi">X</button></p>
         <div class="mymodalHeader">
           <h1>IMPOSTAZIONI DI GENERAZIONE</h1>
         </div>
@@ -37,9 +42,9 @@
           <h1>Genere Utenti</h1>
 
           <div id="contenitoreImmagini">
-            <div style="background-image: url(./img/machio.png)"></div>
-            <div style="background-image: url(./img/femmina.png)"></div>
-            <div style="background-image: url(./img/unione.png)"></div>
+            <div style="background-image: url(./img/machio.png)" data-genere="male"></div>
+            <div style="background-image: url(./img/femmina.png)" data-genere="female"></div>
+            <div style="background-image: url(./img/unione.png)" data-genere=""></div>
           </div>
         </div>
         <div>
@@ -48,7 +53,7 @@
       </div>
 
       <div id="modalOrdinamenti" class="mymodal">
-        <p><button id="chiudiOrdinamenti">X</button></p>
+        <p><button id="chiudiOrdinamenti" class="btnChiudi">X</button></p>
         <div class="mymodalHeader">
           <h1>Ordinamenti</h1>
         </div>
@@ -205,7 +210,7 @@
       </div>
 
       <div id="modalCard" class="mymodal">
-        <p><button id="chiudiCard">X</button></p>
+        <p><button id="chiudiCard" class="btnChiudi">X</button></p>
         <div class="mymodalHeaderCard">
           <img src="" alt="" />
         </div>
@@ -218,7 +223,6 @@
 
           <label for="txtData"> Iscrizione </label>
           <input readonly class="txt" type="text" value="" id="txtData" />
-
 
           <label for="txtIndirizzo"> Indirizzo </label>
           <input readonly class="txt" type="text" value="" id="txtIndirizzo" />
@@ -238,27 +242,15 @@
 
       <div id="btnsWrapper">
         <button id="btnImpostazioni">Impostazioni</button>
-        <button id="btnQuery">Ordinamenti</button>
+        <button id="btnOrdinamenti">Ordinamenti</button>
       </div>
 
       <div id="main">
         <div id="visualizzatoreMultiplo">
-          <div class="card">
+          <!-- <div class="card">
             <img src="https://randomuser.me/api/portraits/men/51.jpg" alt="" />
             <div>Nicolò Gatto</div>
-          </div>
-          <div class="card">
-            <img src="https://randomuser.me/api/portraits/men/51.jpg" alt="" />
-            <div>Nicolò Gatto</div>
-          </div>
-          <div class="card">
-            <img src="https://randomuser.me/api/portraits/men/51.jpg" alt="" />
-            <div>Nicolò Gatto</div>
-          </div>
-          <div class="card">
-            <img src="https://randomuser.me/api/portraits/men/51.jpg" alt="" />
-            <div>Nicolò Gatto</div>
-          </div>
+          </div> -->
         </div>
 
         <div id="visualizzatoreSingolo"></div>
