--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
       crossorigin="anonymous"></script>
   </head>
   <body class="bg">
-    <div id="wrapper">
+    <div
+      style="
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        display: none;
+        padding: 20px;
+      "
+      id="bgScuro">
       <div id="modalImpostazioni" class="mymodal">
         <p><button id="chiudiImpostazioni" class="btnChiudi">X</button></p>
         <div class="mymodalHeader">
@@ -36,15 +49,21 @@
               max="100"
               value="20"
               id="rangePersone" />
-            <div style="margin-top: 10px; font-size: 18pt">20</div>
+            <div style="margin-top: 10px; font-size: 18pt" id="valuePersone">20</div>
           </div>
 
           <h1>Genere Utenti</h1>
 
           <div id="contenitoreImmagini">
-            <div style="background-image: url(./img/machio.png)" data-genere="male"></div>
-            <div style="background-image: url(./img/femmina.png)" data-genere="female"></div>
-            <div style="background-image: url(./img/unione.png)" data-genere=""></div>
+            <div
+              style="background-image: url(./img/machio.png)"
+              data-genere="male" class="selectedGender"></div>
+            <div
+              style="background-image: url(./img/femmina.png)"
+              data-genere="female"></div>
+            <div
+              style="background-image: url(./img/unione.png)"
+              data-genere=""></div>
           </div>
         </div>
         <div>
@@ -234,7 +253,9 @@
           <input readonly class="txt" type="text" value="" id="txtPassword" />
         </div>
       </div>
+    </div>
 
+    <div id="wrapper">
       <header class="">
         <h1>Random User Generator</h1>
         <div>Generatore gratutito di utenti</div>
