cambiati colori in modal impostazioni

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
           <div id="contenitoreImmagini">
             <div
-              style="background-image: url(./img/machio.png)"
+              style="background-image: url(./img/machio.png); border-color: #61a4beff; box-shadow: rgb(34, 108, 138);"
               data-genere="male" class="selectedGender"></div>
             <div
               style="background-image: url(./img/femmina.png)"
