btn rigenera aggiunto e inizio readme

--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
 
       <div id="btnsWrapper">
         <button id="btnImpostazioni">Genera</button>
-        <button id="btnOrdinamenti">Ordinamenti</button>
+        <button id="btnOrdinamenti">Ordinamenti</button><br>
+        <button id="btnRigenera">Rigenera</button>
       </div>
       <div style="margin-bottom: 80px;">
         <input type="text" id="searchBar" placeholder="Cerca...">
