--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <label for="txtEmail"> Email </label>
           <input readonly class="txt" type="email" value="" id="txtEmail" />
 
-          <label for="txtData"> Iscrizione </label>
+          <label for="txtData"> Data di Nascita </label>
           <input readonly class="txt" type="text" value="" id="txtData" />
 
           <label for="txtIndirizzo"> Nazione </label>
